# 3D_scanner_project

./: README.md  main.py  main2.py  read_pcd.py  test.pcd  test.ply  tiktok.py  tool.py  vis_open3d.py
c++_ver/: CMakeLists.txt  cap_test.cpp  main.cpp  test.cpp
c++_ver/simple-serial-port/: SimpleSerial.cpp
cad/: part1.prt.1  part1.stl  part2.prt.1  part2.stl  part3.prt.1  part3.stl
d435i/: 1.py  main.py  main2.py  main3.py  tool.py  vis_pointcloud.py  vis_pointcloud2.py  vis_test.py
ver2/: main.py  main2.py  main3.py  pyserial_ex.py  test.py  test2.py  tool.py
